Prevent font wrapping on patient index

--- a/public/css/application/elements.less
+++ b/public/css/application/elements.less
@@ -13,6 +13,10 @@ h1 {
 	font-size: @extra-large-font;
 }
 
+h2 {
+	font-size: @huge-font;
+}
+
 #content label {
 	text-transform: uppercase;
 
