--- a/public/css/helpers/constants.less
+++ b/public/css/helpers/constants.less
@@ -23,6 +23,7 @@
 
 /* Font Sizes */
 @extra-large-font: 32px;
+@huge-font: 28px;
 @large-font: 20px;
 @medium-font: 15px;
 @subtitle-font: 13px;
